--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
- <!-- <div>
+  <div>
   <h1>
     Welcome to {{ title }}!
   </h1>
@@ -15,6 +15,6 @@
   <button>View</button>
 
   
-</div> -->
+</div> 
   <app-menu></app-menu>
   <router-outlet></router-outlet>
